--- a/src/config/config.json
+++ b/src/config/config.json
@@ -8,8 +8,8 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "Shivam@123",
+    "database": "erp_db_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
